[package]
name = "template-rs"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["template"]
categories = ["multimedia::audio"]
repository = "https://github.com/opensound-org/template-rs"
homepage = "https://github.com/opensound-org/template-rs"
description = """
🚧 Template for Rust repositories used by `opensound-org` (WIP, nothing usable for now).
"""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because we are using 2024 Edition.
# 因为我们正在使用2024 Edition。
# https://blog.rust-lang.org/2025/02/20/Rust-1.85.0.html
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]

[dev-dependencies]

[build-dependencies]
version_check = "0.9.5"
